--- a/oasky/index.html
+++ b/oasky/index.html
@@ -31,20 +31,16 @@
         <div class="card">
           <img src="exam.jpg" alt="exam" style="width:100%">
             <h4><b> EXAMS TYPES </b></h4>
-            <p>Check for time and vanue where exams are held <br>
-              Revise through past exam papers<br>
-              Ensure bringing required and allowed materials<br>
-              Attend the exam 15 minute before starting time </p>
+            <p>Exams can take a variety of forms. Often lecturers use a combination of these forms in a single exam paper. These forms are:
+               multiple choice, true/false answers, short answers, essays, practical, open book, problem solving, oral
+            </p>
             <button class="button">08 8946 7459</button>
             <button class="button"> <A HREF="mailto:name@mydomain.com">allsp@cdu.edu.au</A> </button>
           </div>
           <div class="card">
             <img src="exam.jpg" alt="exam" style="width:100%">
-              <h4><b>PREPARATION GUIDE </b></h4>
-              <p>Check for time and vanue where exams are held <br>
-                Revise through past exam papers<br>
-                Ensure bringing required and allowed materials<br>
-                Attend the exam 15 minute before starting time </p>
+              <h4><b>CONTROLLING STRESS</b></h4>
+              <p>It is normal to experience some level of anxiety or stress just before and during an examination. This is appropriate and helps spur us on. However, unexpectedly stress can throw us off balance at just the wrong moment.</p>
               <button class="button">08 8946 7459</button>
               <button class="button"> <A HREF="mailto:name@mydomain.com">allsp@cdu.edu.au</A> </button>
             </div>
